--- a/customer/templates/customer/footer.html
+++ b/customer/templates/customer/footer.html
@@ -2,6 +2,6 @@
     <div class="footer-copyright text-center py-3">
         &copy; 2020 Copyright:
         <a href="http://localhost:8000">Latin Food</a>
-        <a class="ml-3" href="">Restaurant Login</a>
+        <a class="ml-3" href="{% url 'dashboard' %}">Restaurant Login</a>
     </div>
 </footer>
